Update flask app.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,10 @@
     color : rgb(22, 141, 135);
 }
 
+.swal2-container {
+    align-items: flex-end; /* Align items to the bottom */
+}
+
 
 /* updated  */
 
