--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,10 @@
           <div class="form">
               <form action="{{ url_for('predict') }}" method="POST">
 
-                  Bedrooms: <input type="number" name='LotArea' placeholder="Enter the no of Bedrooms"><br>
-                  Bathrooms: <input type="number" name='TotRmsAbvGrd' placeholder="Enter the no of Bathrooms"><br>
-                  Floors: <input type="number" name='BedroomAbvGr' placeholder="Enter the no of Floors"><br>
+                  Lot Area: <input type="number" name='LotArea' placeholder="Enter the no of Bedrooms"><br>
+                  Bedrooms: <input type="number" name='BedroomAbvGr' placeholder="Enter the no of Bedrooms"><br>
+                  Bathrooms: <input type="number" name='FullBath' placeholder="Enter the no of Bathrooms"><br>
+                  Garage Cars: <input type="number" name='GarageCars' placeholder="Enter the no of Garage Cars"><br>
                   Year of Build: <input type="number" name='YearBuilt' placeholder="Enter year of Build"><br>
 
                   <!-- For Neural Network Model -->
